--- a/Strings/Resources.language-zh-Hans.resw
+++ b/Strings/Resources.language-zh-Hans.resw
@@ -244,17 +244,20 @@
   <data name="App.Page.SettingsPage.Appearance.Text" xml:space="preserve">
     <value>外观</value>
   </data>
+  <data name="App.Page.SettingsPage.App_IsDeveloper.Header" xml:space="preserve">
+    <value>启用开发者模式</value>
+  </data>
   <data name="App.Page.SettingsPage.App_PersistClipboardAfterExit.Header" xml:space="preserve">
     <value>应用关闭后保留剪切板内的易失性内容(不包括敏感信息)</value>
   </data>
+  <data name="App.Page.SettingsPage.App_RedactLogs.Header" xml:space="preserve">
+    <value>尝试消去日志中的敏感信息(可能存在漏判误判)</value>
+  </data>
+  <data name="App.Page.SettingsPage.App_Storage.Text" xml:space="preserve">
+    <value>存储</value>
+  </data>
   <data name="App.Page.SettingsPage.Dev.Text" xml:space="preserve">
     <value>开发者选项</value>
-  </data>
-  <data name="App.Page.SettingsPage.Dev_IsDeveloper.Header" xml:space="preserve">
-    <value>启用开发者模式</value>
-  </data>
-  <data name="App.Page.SettingsPage.Dev_Storage.Text" xml:space="preserve">
-    <value>存储</value>
   </data>
   <data name="App.Page.SettingsPage.Misc.Text" xml:space="preserve">
     <value>杂项</value>
