--- a/Strings/Resources.language-zh-Hans.resw
+++ b/Strings/Resources.language-zh-Hans.resw
@@ -247,23 +247,51 @@
   <data name="App.Page.SettingsPage.App_IsDeveloper.Header" xml:space="preserve">
     <value>启用开发者模式</value>
   </data>
+  <data name="App.Page.SettingsPage.App_LogLevel.Header" xml:space="preserve">
+    <value>日志等级</value>
+  </data>
   <data name="App.Page.SettingsPage.App_PersistClipboardAfterExit.Header" xml:space="preserve">
     <value>应用关闭后保留剪切板内的易失性内容(不包括敏感信息)</value>
   </data>
   <data name="App.Page.SettingsPage.App_RedactLogs.Header" xml:space="preserve">
     <value>尝试消去日志中的敏感信息(可能存在漏判误判)</value>
   </data>
-  <data name="App.Page.SettingsPage.App_Storage.Text" xml:space="preserve">
-    <value>存储</value>
+  <data name="App.Page.SettingsPage.App_StoreLogs.Header" xml:space="preserve">
+    <value>保存日志文件</value>
+  </data>
+  <data name="App.Page.SettingsPage.CalculateCacheButton.Content" xml:space="preserve">
+    <value>计算缓存大小</value>
+  </data>
+  <data name="App.Page.SettingsPage.CalculateCacheResultText_ToolTip" xml:space="preserve">
+    <value>应用程序: {0}
+系统管理的: {1}</value>
+  </data>
+  <data name="App.Page.SettingsPage.ClearCacheButton.Content" xml:space="preserve">
+    <value>清空缓存</value>
+  </data>
+  <data name="App.Page.SettingsPage.Config.Text" xml:space="preserve">
+    <value>配置</value>
   </data>
   <data name="App.Page.SettingsPage.Dev.Text" xml:space="preserve">
     <value>开发者选项</value>
+  </data>
+  <data name="App.Page.SettingsPage.ExportConfigToClipboard.Content" xml:space="preserve">
+    <value>导出配置至剪贴板</value>
+  </data>
+  <data name="App.Page.SettingsPage.ImportConfigFromClipboard.Content" xml:space="preserve">
+    <value>从剪贴板导入配置</value>
+  </data>
+  <data name="App.Page.SettingsPage.Log.Text" xml:space="preserve">
+    <value>日志</value>
   </data>
   <data name="App.Page.SettingsPage.Misc.Text" xml:space="preserve">
     <value>杂项</value>
   </data>
   <data name="App.Page.SettingsPage.OpenStorageFolderButton.Content" xml:space="preserve">
     <value>打开应用存储文件夹</value>
+  </data>
+  <data name="App.Page.SettingsPage.Storage.Text" xml:space="preserve">
+    <value>存储</value>
   </data>
   <data name="App.Page.SettingsPage.Title" xml:space="preserve">
     <value>设置</value>
