--- a/Strings/Resources.language-zh-Hans.resw
+++ b/Strings/Resources.language-zh-Hans.resw
@@ -258,6 +258,9 @@
   <data name="App.Page.MediaPlayPage.Sidebar.Details.Header" xml:space="preserve">
     <value>详情</value>
   </data>
+  <data name="App.Page.MediaPlayPage.Sidebar.Parts.Text" xml:space="preserve">
+    <value>分集</value>
+  </data>
   <data name="App.Page.MediaPlayPage.Title" xml:space="preserve">
     <value>媒体播放页</value>
   </data>
@@ -306,6 +309,9 @@
   </data>
   <data name="App.Page.SettingsPage.App_RedactLogs.Header" xml:space="preserve">
     <value>尝试消去日志中的敏感信息(可能存在漏判误判)</value>
+  </data>
+  <data name="App.Page.SettingsPage.App_ShowDetailedStats.Header" xml:space="preserve">
+    <value>打开媒体播放页时显示详细统计信息</value>
   </data>
   <data name="App.Page.SettingsPage.App_ShowTabThumbnails.Header" xml:space="preserve">
     <value>当光标停留在非活跃标签页上时显示缩略图(可能会严重降低性能)</value>
@@ -376,6 +382,9 @@
   </data>
   <data name="App.Page.UserPage.Tabs.Videos.Header" xml:space="preserve">
     <value>视频</value>
+  </data>
+  <data name="App.Page.UserPage.Title" xml:space="preserve">
+    <value>用户页</value>
   </data>
   <data name="App.XCommon.Cancel.Content" xml:space="preserve">
     <value>取消</value>
