--- a/Strings/Resources.language-zh-Hans.resw
+++ b/Strings/Resources.language-zh-Hans.resw
@@ -255,6 +255,9 @@
   <data name="App.Page.MediaPlayPage.Error.Unknown" xml:space="preserve">
     <value>发生了未知错误</value>
   </data>
+  <data name="App.Page.MediaPlayPage.LoadingSubtitles" xml:space="preserve">
+    <value>正在加载字幕...</value>
+  </data>
   <data name="App.Page.MediaPlayPage.Sidebar.CopyPartTitle" xml:space="preserve">
     <value>复制分集标题</value>
   </data>
@@ -338,6 +341,12 @@
   <data name="App.Page.SettingsPage.Config.Text" xml:space="preserve">
     <value>配置</value>
   </data>
+  <data name="App.Page.SettingsPage.Credentials.Text" xml:space="preserve">
+    <value>凭证</value>
+  </data>
+  <data name="App.Page.SettingsPage.CredentialsExpireAfterText" xml:space="preserve">
+    <value>凭证将于 {0} 之后过期。</value>
+  </data>
   <data name="App.Page.SettingsPage.Dev.Text" xml:space="preserve">
     <value>开发者选项</value>
   </data>
@@ -359,8 +368,20 @@
   <data name="App.Page.SettingsPage.Playing.Text" xml:space="preserve">
     <value>播放</value>
   </data>
+  <data name="App.Page.SettingsPage.RefreshCredentialTokensButton.Content" xml:space="preserve">
+    <value>立刻刷新凭证</value>
+  </data>
   <data name="App.Page.SettingsPage.Storage.Text" xml:space="preserve">
     <value>存储</value>
+  </data>
+  <data name="App.Page.SettingsPage.Subtitle.Text" xml:space="preserve">
+    <value>字幕</value>
+  </data>
+  <data name="App.Page.SettingsPage.Subtitle_ManagedBySystem.Text" xml:space="preserve">
+    <value>字幕设置当前由 Windows 管理。</value>
+  </data>
+  <data name="App.Page.SettingsPage.Subtitle_OpenSettings.Content" xml:space="preserve">
+    <value>打开 Windows 设置</value>
   </data>
   <data name="App.Page.SettingsPage.Title" xml:space="preserve">
     <value>设置</value>
