--- a/Strings/Resources.language-zh-Hans.resw
+++ b/Strings/Resources.language-zh-Hans.resw
@@ -358,6 +358,9 @@
   <data name="App.Page.SettingsPage.App_UseHRASForVideo.Header" xml:space="preserve">
     <value>播放视频时总是使用 HRAS 取流(若不选中则偏好原生取流)</value>
   </data>
+  <data name="App.Page.SettingsPage.App_UseWinUI3Style.Header" xml:space="preserve">
+    <value>使用新式控件风格(WinUI 3)</value>
+  </data>
   <data name="App.Page.SettingsPage.CalculateCacheButton.Content" xml:space="preserve">
     <value>计算缓存大小</value>
   </data>
