--- a/Strings/Resources.language-zh-Hans.resw
+++ b/Strings/Resources.language-zh-Hans.resw
@@ -147,6 +147,9 @@
   <data name="App.Common.No" xml:space="preserve">
     <value>否</value>
   </data>
+  <data name="App.Common.NotLoggedIn" xml:space="preserve">
+    <value>未登录</value>
+  </data>
   <data name="App.Common.Reload" xml:space="preserve">
     <value>重新加载</value>
   </data>
@@ -303,121 +306,130 @@
   <data name="App.Page.NewPage.Title" xml:space="preserve">
     <value>新页</value>
   </data>
-  <data name="App.Page.SettingsPage.About.Text" xml:space="preserve">
-    <value>关于</value>
-  </data>
-  <data name="App.Page.SettingsPage.About_Details1.Text" xml:space="preserve">
+  <data name="App.Page.Settings.AboutPage.About_Details1.Text" xml:space="preserve">
     <value>作者: apkipa (apkipa1@gmail.com)
 使用的依赖库:</value>
   </data>
-  <data name="App.Page.SettingsPage.About_Details2.Text" xml:space="preserve">
+  <data name="App.Page.Settings.AboutPage.About_Details2.Text" xml:space="preserve">
     <value>感谢以下资源提供的帮助:</value>
   </data>
-  <data name="App.Page.SettingsPage.About_DetailsLegal.Text" xml:space="preserve">
+  <data name="App.Page.Settings.AboutPage.About_DetailsLegal.Text" xml:space="preserve">
     <value>此应用为哔哩哔哩的一个第三方客户端，与官方没有任何关联。该应用仅供学习与交流用途，不得用于侵犯合法权益。</value>
   </data>
-  <data name="App.Page.SettingsPage.Appearance.Text" xml:space="preserve">
-    <value>外观</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_AlwaysSyncPlayingCfg.Header" xml:space="preserve">
-    <value>总是同步当前媒体播放设置至全局</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_GlobalVolume.Header" xml:space="preserve">
-    <value>全局音量</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_IsDeveloper.Header" xml:space="preserve">
-    <value>启用开发者模式</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_LogLevel.Header" xml:space="preserve">
-    <value>日志等级</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_OverrideSpaceForPlaybackControl.Header" xml:space="preserve">
-    <value>在播放页中将空格键用于媒体控制而不是控件交互</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_PersistClipboardAfterExit.Header" xml:space="preserve">
-    <value>应用关闭后保留剪切板内的易失性内容(不包括敏感信息)</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_RedactLogs.Header" xml:space="preserve">
-    <value>尝试消去日志中的敏感信息(可能存在漏判误判)</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_ShowDetailedStats.Header" xml:space="preserve">
-    <value>打开媒体播放页时显示详细统计信息</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_ShowTabThumbnails.Header" xml:space="preserve">
+  <data name="App.Page.Settings.AppearancePage.App_ShowTabThumbnails.Header" xml:space="preserve">
     <value>当光标停留在非活跃标签页上时显示缩略图(可能会严重降低性能)</value>
   </data>
-  <data name="App.Page.SettingsPage.App_StoreLogs.Header" xml:space="preserve">
-    <value>保存日志文件</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_UseCustomVideoPresenter.Header" xml:space="preserve">
-    <value>[实验性] 使用自定义视频呈现器</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_UseCustomVideoPresenter.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
-    <value>默认情况下，应用将使用两个交换链(其中一个由系统管理)来渲染视频与叠加层内容(如弹幕)。启用此开关后，应用将自行合成视频与叠加层内容并使用单个交换链渲染。此模式存在性能缺陷，但可能会解决特定场景下的问题，如无必要请勿使用。</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_UseHRASForVideo.Header" xml:space="preserve">
-    <value>播放视频时总是使用 HRAS 取流(若不选中则偏好原生取流)</value>
-  </data>
-  <data name="App.Page.SettingsPage.App_UseWinUI3Style.Header" xml:space="preserve">
+  <data name="App.Page.Settings.AppearancePage.App_UseWinUI3Style.Header" xml:space="preserve">
     <value>使用新式控件风格(WinUI 3)</value>
   </data>
-  <data name="App.Page.SettingsPage.CalculateCacheButton.Content" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.App_IsDeveloper.Header" xml:space="preserve">
+    <value>启用开发者模式</value>
+  </data>
+  <data name="App.Page.Settings.DeveloperPage.App_LogLevel.Header" xml:space="preserve">
+    <value>日志等级</value>
+  </data>
+  <data name="App.Page.Settings.DeveloperPage.App_RedactLogs.Header" xml:space="preserve">
+    <value>尝试消去日志中的敏感信息(可能存在漏判误判)</value>
+  </data>
+  <data name="App.Page.Settings.DeveloperPage.App_ShowDetailedStats.Header" xml:space="preserve">
+    <value>打开媒体播放页时显示详细统计信息</value>
+  </data>
+  <data name="App.Page.Settings.DeveloperPage.App_StoreLogs.Header" xml:space="preserve">
+    <value>保存日志文件</value>
+  </data>
+  <data name="App.Page.Settings.DeveloperPage.App_UseCustomVideoPresenter.Header" xml:space="preserve">
+    <value>[实验性] 使用自定义视频呈现器</value>
+  </data>
+  <data name="App.Page.Settings.DeveloperPage.App_UseCustomVideoPresenter.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>默认情况下，应用将使用两个交换链(其中一个由系统管理)来渲染视频与叠加层内容(如弹幕)。启用此开关后，应用将自行合成视频与叠加层内容并使用单个交换链渲染。此模式存在性能缺陷，但可能会解决特定场景下的问题，如无必要请勿使用。</value>
+  </data>
+  <data name="App.Page.Settings.DeveloperPage.CalculateCacheButton.Content" xml:space="preserve">
     <value>计算缓存大小</value>
   </data>
-  <data name="App.Page.SettingsPage.CalculateCacheResultText_ToolTip" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.CalculateCacheResultText_ToolTip" xml:space="preserve">
     <value>应用程序: {0}
 系统管理的: {1}</value>
   </data>
-  <data name="App.Page.SettingsPage.ClearCacheButton.Content" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.ClearCacheButton.Content" xml:space="preserve">
     <value>清空缓存</value>
   </data>
-  <data name="App.Page.SettingsPage.Config.Text" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.Config.Text" xml:space="preserve">
     <value>配置</value>
   </data>
-  <data name="App.Page.SettingsPage.Credentials.Text" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.Credentials.Text" xml:space="preserve">
     <value>凭证</value>
   </data>
-  <data name="App.Page.SettingsPage.CredentialsExpireAfterText" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.CredentialsExpireAfterText" xml:space="preserve">
     <value>凭证将于 {0} 之后过期。</value>
   </data>
-  <data name="App.Page.SettingsPage.Dev.Text" xml:space="preserve">
-    <value>开发者选项</value>
-  </data>
-  <data name="App.Page.SettingsPage.ExportConfigToClipboard.Content" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.ExportConfigToClipboard.Content" xml:space="preserve">
     <value>导出配置至剪贴板</value>
   </data>
-  <data name="App.Page.SettingsPage.ImportConfigFromClipboard.Content" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.ImportConfigFromClipboard.Content" xml:space="preserve">
     <value>从剪贴板导入配置</value>
   </data>
-  <data name="App.Page.SettingsPage.Log.Text" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.Log.Text" xml:space="preserve">
     <value>日志</value>
   </data>
-  <data name="App.Page.SettingsPage.Misc.Text" xml:space="preserve">
-    <value>杂项</value>
-  </data>
-  <data name="App.Page.SettingsPage.OpenStorageFolderButton.Content" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.OpenStorageFolderButton.Content" xml:space="preserve">
     <value>打开应用存储文件夹</value>
   </data>
-  <data name="App.Page.SettingsPage.Playing.Text" xml:space="preserve">
-    <value>播放</value>
-  </data>
-  <data name="App.Page.SettingsPage.RefreshCredentialTokensButton.Content" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.RefreshCredentialTokensButton.Content" xml:space="preserve">
     <value>立刻刷新凭证</value>
   </data>
-  <data name="App.Page.SettingsPage.Storage.Text" xml:space="preserve">
+  <data name="App.Page.Settings.DeveloperPage.Storage.Text" xml:space="preserve">
     <value>存储</value>
   </data>
-  <data name="App.Page.SettingsPage.Subtitle.Text" xml:space="preserve">
+  <data name="App.Page.Settings.MainPage.About.Content" xml:space="preserve">
+    <value>关于</value>
+  </data>
+  <data name="App.Page.Settings.MainPage.Appearance.Content" xml:space="preserve">
+    <value>外观</value>
+  </data>
+  <data name="App.Page.Settings.MainPage.Dev.Content" xml:space="preserve">
+    <value>开发者选项</value>
+  </data>
+  <data name="App.Page.Settings.MainPage.Misc.Content" xml:space="preserve">
+    <value>杂项</value>
+  </data>
+  <data name="App.Page.Settings.MainPage.Playing.Content" xml:space="preserve">
+    <value>播放</value>
+  </data>
+  <data name="App.Page.Settings.MainPage.Title" xml:space="preserve">
+    <value>设置</value>
+  </data>
+  <data name="App.Page.Settings.MainPage.User.Content" xml:space="preserve">
+    <value>用户</value>
+  </data>
+  <data name="App.Page.Settings.MiscPage.App_PersistClipboardAfterExit.Header" xml:space="preserve">
+    <value>应用关闭后保留剪切板内的易失性内容(不包括敏感信息)</value>
+  </data>
+  <data name="App.Page.Settings.PlayingPage.App_AlwaysSyncPlayingCfg.Header" xml:space="preserve">
+    <value>总是同步当前媒体播放设置至全局</value>
+  </data>
+  <data name="App.Page.Settings.PlayingPage.App_GlobalVolume.Header" xml:space="preserve">
+    <value>全局音量</value>
+  </data>
+  <data name="App.Page.Settings.PlayingPage.App_OverrideSpaceForPlaybackControl.Header" xml:space="preserve">
+    <value>在播放页中将空格键用于媒体控制而不是控件交互</value>
+  </data>
+  <data name="App.Page.Settings.PlayingPage.App_UseHRASForVideo.Header" xml:space="preserve">
+    <value>播放视频时总是使用 HRAS 取流(若不选中则偏好原生取流)</value>
+  </data>
+  <data name="App.Page.Settings.PlayingPage.Subtitle.Text" xml:space="preserve">
     <value>字幕</value>
   </data>
-  <data name="App.Page.SettingsPage.Subtitle_ManagedBySystem.Text" xml:space="preserve">
+  <data name="App.Page.Settings.PlayingPage.Subtitle_ManagedBySystem.Text" xml:space="preserve">
     <value>字幕设置当前由 Windows 管理。</value>
   </data>
-  <data name="App.Page.SettingsPage.Subtitle_OpenSettings.Content" xml:space="preserve">
+  <data name="App.Page.Settings.PlayingPage.Subtitle_OpenSettings.Content" xml:space="preserve">
     <value>打开 Windows 设置</value>
   </data>
-  <data name="App.Page.SettingsPage.Title" xml:space="preserve">
-    <value>设置</value>
+  <data name="App.Page.Settings.UserPage.LoginButton.Content" xml:space="preserve">
+    <value>登录</value>
+  </data>
+  <data name="App.Page.Settings.UserPage.LogoutButton.Content" xml:space="preserve">
+    <value>退出登录</value>
   </data>
   <data name="App.Page.UserPage.Error.ServerAPIFailed" xml:space="preserve">
     <value>服务器 API 调用失败，用户可能不存在或程序出现了 BUG</value>
