--- a/Strings/Resources.language-zh-Hans.resw
+++ b/Strings/Resources.language-zh-Hans.resw
@@ -431,6 +431,9 @@
   <data name="App.Page.Settings.UserPage.LogoutButton.Content" xml:space="preserve">
     <value>退出登录</value>
   </data>
+  <data name="App.Page.Settings.UserPage.RefreshButton.Content" xml:space="preserve">
+    <value>刷新</value>
+  </data>
   <data name="App.Page.UserPage.Error.ServerAPIFailed" xml:space="preserve">
     <value>服务器 API 调用失败，用户可能不存在或程序出现了 BUG</value>
   </data>
